--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-camera": "^8.0.0",
     "expo-image-picker": "^8.0.2",
     "form-data": "^3.0.0",
+    "formik": "^2.1.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "~16.9.0",
@@ -31,7 +32,8 @@
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
