--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.4",
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "apollo-client": "^2.6.8",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-camera": "^8.0.0",
     "expo-image-picker": "^8.0.2",
     "form-data": "^3.0.0",
     "formik": "^2.1.4",
+    "graphql": "^15.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "~16.9.0",
