--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-camera": "^8.0.0",
@@ -21,9 +23,11 @@
     "form-data": "^3.0.0",
     "formik": "^2.1.4",
     "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "~16.9.0",
+    "react-apollo": "^3.1.4",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-elements": "^1.2.7",
