--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
