--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.5",
+    "@react-navigation/drawer": "^5.4.1",
+    "@react-navigation/material-bottom-tabs": "^5.1.8",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
     "apollo-boost": "^0.4.7",
@@ -34,12 +36,12 @@
     "react-native": "~0.61.4",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "1.5.0",
+    "react-native-paper": "^3.8.0",
     "react-native-pie-chart": "^1.0.13",
     "react-native-reanimated": "1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
-    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
